enable login and registration
